--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is local repo</h1>
-    <h2>This is a feature</h2>
+    <h2>This is a feature (button)</h2>
     <script src="app.js"></script>
 </body>
 </html>
